src/styles.css
/* ======================= All variables ======================= */

/* ----------------------- Colors ----------------------- */

/*
 * Primary and accent colors are from here: https://material-ui.com/customization/color/#color-tool
 * Background and text colors are from here: https://uxplanet.org/8-tips-for-dark-theme-design-8dfc2f8f7ab6
 */
:root {
    --google-recommended-dark-background-color: #121212;
    --paper-background-color: #424242;
    --primary-color-dark: #1769aa;
    --primary-color-main: #2196f3; /* BLUE 500 */
    --primary-color-light: #4dabf5;
    --primary-color-lighter: #cee8fc;
    --accent-color-dark: #b28900;
    --accent-color-main: #ffc400; /* AMBER A400 */
    --accent-color-light: #ffcf33;
    --disabled-color: #404040;
    --light-text-color-high-emphasis: rgba(255, 255, 255, 0.87);
    --light-text-color-medium-emphasis: rgba(255, 255, 255, 0.70);
    --light-text-color-disabled: rgba(255, 255, 255, 0.38);
}

:root {
    --page-background-color: #101016;
    --main-background-color: var(--paper-background-color);
    --navbar-color: black;
    --dark-primary-text-color: #000; /* BLACK */
    --error-color: #ff5722; /* DEEP ORANGE 500 */
    --accent-color: #ff5722; /* DEEP ORANGE 500 */
    --light-disabled-text-color: #fafafa; /* GREY 50 */
    --divider-color: #bdbdbd; /* GREY 400 */
    --card-background-color: #fafafa; /* GREY 50 */
}

/* ----------------------- Fonts ----------------------- */

:root {
    --ui-font: 'IBM Plex Sans', sans-serif;
    --header-font: 'IBM Plex Sans', sans-serif;
    --content-font: 'IBM Plex Sans', sans-serif;
}

/* ----------------------- Sizes ----------------------- */

:root {
    --minimum-site-width: 320px;
    --maximum-content-width: 900px;
    --site-header-height: 47px;
    --site-header-profile-pic-size: 40px;
    --page-vertical-padding-size: 20px;
    --site-header-vertical-padding: calc((var(--site-header-height) - var(--base-font-size) * 0.9 * 1.3) / 2);
}

/* ======================= Typography ======================= */

:root {
    --base-font-size: 1.3rem;
    --base-line-height: 1.6;
}
@media screen and (max-width: 730px) {
    :root {
        --base-font-size: 4vw;
    }
}
@media screen and (max-width: 320px) {
    :root {
        --base-font-size: 0.8rem;
    }
}
body {font-family: var(--content-font); font-size: var(--base-font-size); line-height: var(--base-line-height); }
figcaption { font-size: 50%; line-height: 1.3; }
h1, h2, h3, h4, h5, h6 { font-family: var(--header-font); line-height: 1.2; }
main { }
input, button { font-family: var(--ui-font); font-size: var(--base-font-size); }
pre { font-size: 60%; line-height: 1.6; }
header { font-family: var(--ui-font); font-size:90%; line-height: 1.3; }
article .articleMetadata { font-size: 70%; }
article .enlargeable.fullscreen figcaption { font-size: 100%; }
footer { font-family: var(--ui-font); font-size:90%; }

table.photatoMessages { font-size: 80%; }

/* ======================= Generic styles ======================= */

body { margin: 0; padding: 0; display: flex; flex-direction: column; background: var(--page-background-color); color: var(--light-text-color-medium-emphasis); }

* {box-sizing: border-box;}
h1, h2, h3, h4, h5, h6, p { margin-block-start: 1em; margin-block-end: 0.5em; }
ul, ol { margin-block-start: 0.5em; margin-block-end: 0.5em; }
li { margin-block-start: 0.5em; margin-block-end: 0.5em; }
figure { margin: 0; }
figcaption { text-align: center; }
table { width: 100%; }
th { text-align: center; color: var(--accent-color-main); border-bottom: 2px solid var(--accent-color-main); }
img { display: inline-block; }
pre { margin-block-start: 1em; margin-block-end: 1em; white-space: pre-line; }

input[type="text"] { border: none; outline: none; border-bottom: 1px solid var(--primary-color-light); border-radius: 2px; padding-bottom: 0.1em; color: var(--dark-primary-text-color); }

button { margin-block-start: 1em; margin-block-end: 1em; border: none; padding: 0.5em 1em; border-radius: 2px; background-color: var(--primary-color-main); color: var(--light-text-color-high-emphasis); transition: background-color 0.1s ease; cursor: pointer; }
button:hover { background: var(--primary-color-dark); }
button[disabled] { background: var(--disabled-color); color: var(--light-text-color-disabled); cursor: default;}
a, a:visited { color: var(--primary-color-light); text-decoration: none; }
a:hover, a:active { text-decoration: underline var(--accent-color-main); }
a.external { background: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg enable-background='new 0 0 512 512' version='1.1' viewBox='0 0 512 512' xml:space='preserve' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m312.7 0v56.7h102.6l-280.5 280.4 40.1 40.1 280.4-280.5v102.6h56.7v-199.3z' fill='%23b28900'/%3E%3Cpath d='m455.3 455.3h-398.6v-398.6h199.3v-56.7h-199.3c-31.3 0-56.7 25.4-56.7 56.7v398.7c0 31.2 25.4 56.6 56.7 56.6h398.7c31.3 0 56.7-25.4 56.7-56.7v-199.3h-56.7c-0.1 0-0.1 199.3-0.1 199.3z' fill='%231769aa'/%3E%3C/svg%3E%0A") top right no-repeat; background-size:0.5em; padding-right:0.7em; }
a.external:hover { background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg enable-background='new 0 0 512 512' version='1.1' viewBox='0 0 512 512' xml:space='preserve' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m312.7 0v56.7h102.6l-280.5 280.4 40.1 40.1 280.4-280.5v102.6h56.7v-199.3z' fill='%23ffc400'/%3E%3Cpath d='m455.3 455.3h-398.6v-398.6h199.3v-56.7h-199.3c-31.3 0-56.7 25.4-56.7 56.7v398.7c0 31.2 25.4 56.6 56.7 56.6h398.7c31.3 0 56.7-25.4 56.7-56.7v-199.3h-56.7c-0.1 0-0.1 199.3-0.1 199.3z' fill='%231769aa'/%3E%3C/svg%3E%0A"); }
a.brokenLink { text-decoration: line-through; }

/* Non-semantic class, so it's a bit of cheating, but makes life easier. */
.preWrap { white-space: pre-wrap; }
/* ... */

